Add more sizes for Scene

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "becs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Bitmasked entity-component-system library.",
   "author": "Kyle Lin",
   "license": "MIT",
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.0.0-beta.51",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.0-beta.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^4.19.1",
     "gh-pages": "^1.2.0",
     "idempotent-babel-polyfill": "^6.26.0",
