--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "prepublish": "npm run build",
     "start": "webpack --config ./webpack.dev.config.js",
     "build": "webpack",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.51",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^4.19.1",
     "gh-pages": "^1.2.0",
+    "jest": "^23.4.2",
     "nodemon-webpack-plugin": "^3.0.1",
     "serve": "^9.0.0",
     "webpack": "^4.8.3",
